--- a/Saliency_maps_in_pytorch.ipynb
+++ b/Saliency_maps_in_pytorch.ipynb
@@ -51,7 +51,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "0dbce62a-0b0e-4464-e2d7-284c8a5aad98"
+        "outputId": "763d8578-a4ee-4a9a-d756-dd9354f1e361"
       },
       "source": [
         "#load pretrained resnet model\n",
@@ -274,6 +274,10 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "def saliency(img, model):\n",
+        "    #we don't need gradients w.r.t. weights for a trained model\n",
+        "    for param in model.parameters():\n",
+        "        param.requires_grad = False\n",
+        "    \n",
         "    #set model in eval mode\n",
         "    model.eval()\n",
         "    #transoform input PIL image to torch.Tensor and normalize\n",
@@ -316,7 +320,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 223
         },
-        "outputId": "e7cd477b-1b5c-476d-e642-216a3fe5c914"
+        "outputId": "1c23b395-20a8-420b-990d-78278cff1804"
       },
       "source": [
         "!wget https://www.healthline.com/hlcmsresource/images/Lifestyle/Stingray_Water-732x549-Thumbnail.jpg -O sting.jpg"
@@ -326,16 +330,16 @@
         {
           "output_type": "stream",
           "text": [
-            "--2020-07-31 08:30:13--  https://www.healthline.com/hlcmsresource/images/Lifestyle/Stingray_Water-732x549-Thumbnail.jpg\n",
-            "Resolving www.healthline.com (www.healthline.com)... 13.224.0.65, 13.224.0.40, 13.224.0.46, ...\n",
-            "Connecting to www.healthline.com (www.healthline.com)|13.224.0.65|:443... connected.\n",
+            "--2020-07-31 08:35:56--  https://www.healthline.com/hlcmsresource/images/Lifestyle/Stingray_Water-732x549-Thumbnail.jpg\n",
+            "Resolving www.healthline.com (www.healthline.com)... 13.224.0.116, 13.224.0.65, 13.224.0.46, ...\n",
+            "Connecting to www.healthline.com (www.healthline.com)|13.224.0.116|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 46502 (45K) [image/jpeg]\n",
             "Saving to: ‘sting.jpg’\n",
             "\n",
-            "\rsting.jpg             0%[                    ]       0  --.-KB/s               \rsting.jpg           100%[===================>]  45.41K  --.-KB/s    in 0.009s  \n",
+            "\rsting.jpg             0%[                    ]       0  --.-KB/s               \rsting.jpg           100%[===================>]  45.41K  --.-KB/s    in 0.007s  \n",
             "\n",
-            "2020-07-31 08:30:14 (5.19 MB/s) - ‘sting.jpg’ saved [46502/46502]\n",
+            "2020-07-31 08:35:56 (6.32 MB/s) - ‘sting.jpg’ saved [46502/46502]\n",
             "\n"
           ],
           "name": "stdout"
@@ -351,7 +355,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 324
         },
-        "outputId": "8d50a0a3-c373-4bf6-cb4c-4bcf6d98173c"
+        "outputId": "802523f4-03a2-4495-fd98-022b6ee96308"
       },
       "source": [
         "from PIL import Image\n",
@@ -391,7 +395,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 223
         },
-        "outputId": "5d7919bd-2707-4eab-a59c-8f98dcb334ac"
+        "outputId": "1ff6b529-d1aa-4da7-8844-5fd3e3e54d8b"
       },
       "source": [
         "!wget https://cdn.pixabay.com/photo/2016/12/13/05/15/puppy-1903313__340.jpg -O puppy.jpg"
@@ -401,16 +405,16 @@
         {
           "output_type": "stream",
           "text": [
-            "--2020-07-31 08:30:19--  https://cdn.pixabay.com/photo/2016/12/13/05/15/puppy-1903313__340.jpg\n",
-            "Resolving cdn.pixabay.com (cdn.pixabay.com)... 104.18.21.183, 104.18.20.183, 2606:4700::6812:15b7, ...\n",
-            "Connecting to cdn.pixabay.com (cdn.pixabay.com)|104.18.21.183|:443... connected.\n",
+            "--2020-07-31 08:36:01--  https://cdn.pixabay.com/photo/2016/12/13/05/15/puppy-1903313__340.jpg\n",
+            "Resolving cdn.pixabay.com (cdn.pixabay.com)... 104.18.20.183, 104.18.21.183, 2606:4700::6812:15b7, ...\n",
+            "Connecting to cdn.pixabay.com (cdn.pixabay.com)|104.18.20.183|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 27076 (26K) [image/jpeg]\n",
             "Saving to: ‘puppy.jpg’\n",
             "\n",
             "\rpuppy.jpg             0%[                    ]       0  --.-KB/s               \rpuppy.jpg           100%[===================>]  26.44K  --.-KB/s    in 0s      \n",
             "\n",
-            "2020-07-31 08:30:19 (68.3 MB/s) - ‘puppy.jpg’ saved [27076/27076]\n",
+            "2020-07-31 08:36:01 (77.5 MB/s) - ‘puppy.jpg’ saved [27076/27076]\n",
             "\n"
           ],
           "name": "stdout"
@@ -426,7 +430,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 324
         },
-        "outputId": "53357322-ad96-430d-c62a-530a0cde41d7"
+        "outputId": "985c76f4-8330-4d4f-b11d-3a0637e63435"
       },
       "source": [
         "img = Image.open('puppy.jpg').convert('RGB')\n",
@@ -465,7 +469,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 223
         },
-        "outputId": "9cdcffd0-a691-452c-d1e6-939b8267df90"
+        "outputId": "cef43a8d-bd45-4b3c-e60a-c5d8d41439bb"
       },
       "source": [
         "!wget https://cdn.shopify.com/s/files/1/0357/2432/9005/products/sfskyl-7540_sahara_2._large.jpg?v=159130274733 -O hat.jpg"
@@ -475,16 +479,16 @@
         {
           "output_type": "stream",
           "text": [
-            "--2020-07-31 08:30:24--  https://cdn.shopify.com/s/files/1/0357/2432/9005/products/sfskyl-7540_sahara_2._large.jpg?v=159130274733\n",
-            "Resolving cdn.shopify.com (cdn.shopify.com)... 151.101.0.104, 151.101.64.104, 151.101.128.104, ...\n",
-            "Connecting to cdn.shopify.com (cdn.shopify.com)|151.101.0.104|:443... connected.\n",
+            "--2020-07-31 08:36:05--  https://cdn.shopify.com/s/files/1/0357/2432/9005/products/sfskyl-7540_sahara_2._large.jpg?v=159130274733\n",
+            "Resolving cdn.shopify.com (cdn.shopify.com)... 23.44.161.187, 2a04:4e42::104, 2a04:4e42:200::104, ...\n",
+            "Connecting to cdn.shopify.com (cdn.shopify.com)|23.44.161.187|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 30631 (30K) [image/jpeg]\n",
             "Saving to: ‘hat.jpg’\n",
             "\n",
             "\rhat.jpg               0%[                    ]       0  --.-KB/s               \rhat.jpg             100%[===================>]  29.91K  --.-KB/s    in 0.008s  \n",
             "\n",
-            "2020-07-31 08:30:24 (3.49 MB/s) - ‘hat.jpg’ saved [30631/30631]\n",
+            "2020-07-31 08:36:05 (3.80 MB/s) - ‘hat.jpg’ saved [30631/30631]\n",
             "\n"
           ],
           "name": "stdout"
@@ -500,7 +504,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 324
         },
-        "outputId": "2364ea14-24eb-4266-953d-bae55ee72455"
+        "outputId": "5e93dfb9-b9e7-4650-b6df-f65d1fa72af1"
       },
       "source": [
         "img = Image.open('hat.jpg').convert('RGB')\n",
